# readable-mcp

./: .env.example  .gitignore  DEMO_SCRIPT.md  LICENSE  README.md  pyproject.toml
examples/: claude_desktop_config.json
src/readable_mcp/: __init__.py  cache.py  config.py  extractor.py  http_client.py  logging_config.py  models.py  rate_limiter.py  server.py  validation.py
tests/: conftest.py  test_cache.py  test_extractor.py  test_http_client.py  test_rate_limiter.py  test_server.py  test_validation.py
tests/fixtures/: article.html  blog.html
